# coe241

./: .gitattributes  notebook.ipynb  pyproject.toml
data/: dataset_chromecast.csv  dataset_smart-tv.csv
